[package]
name = "curvature"
authors = ["Neil Crago"]
version = "0.1.2"
edition = "2024"
description = "Curvature estimation for point clouds"
license = "MIT"
repository = "https://github.com/NeilCrago/curvature"
keywords = ["mathematics", "curvature", "Lomb-Scargle", "Bayesian", "experimental"]
documentation = "https://docs.rs/curvature"

[dependencies]
coheron = "0.1.2"
ndarray = "0.15.6"
omni-wave = "0.2.1"
rand = "0.9.2"
